--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,26 @@ apply plugin: "c"
 
 model {
     components {
-        main(NativeExecutableSpec)
+        // libraries
+        ascii(NativeLibrarySpec)
+
+        // executables
+        main(NativeExecutableSpec) {
+            sources {
+                c.lib library: 'ascii'
+            }
+        }
+    }
+}
+
+model {
+    binaries {
+        all {
+            // Define toolchain-specific compiler and linker options
+            if (toolChain in Gcc) {
+                cCompiler.args "-O2"
+                linker.args "-Xlinker", "-S"
+            }
+        }
     }
 }
